snapshot: état courant du worktree avant migration vers GitHub
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>